--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -10,6 +10,46 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+    <header>
+      <nav class="site-header__navigation" aria-label="Primary navigation">
+            <ul class="[ nav ] [ stack ]" role="list">
+            {%- for entry in collections.all | eleventyNavigation %}
+              {% if not entry.hide %}
+              <li{% if page.url and entry.url in page.url %} class="active"{% endif %}>
+                <span>
+                  <a href="{% if entry.url %}{{ entry.url }}{% else %}#{% endif %}">
+                    {{ entry.title }}
+                  </a>
+
+                  {% if entry.children.length %}
+                  <svg xmlns="http://www.w3.org/2000/svg" class="arrow" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+                  </svg>
+                  {% endif %}
+                </span>
+
+                {% if entry.children.length %}
+                  <flyout-menu media="(min-width: 64em)">
+                    <div class="flyout">
+                      <div class="flyout__inner">
+                        <ul role="list">
+                          {%- for entry in entry.children %}
+                            <li>
+                              <h2><a href="{{ entry.url }}" class="breakout-button"{% if entry.external %} target="_blank" rel="noopener noreferrer"{% endif %}>{{ entry.title }}</a></h2>
+                              <p>{{ entry.excerpt }}</p>
+                            </li>
+                          {%- endfor %}
+                        </ul>
+                      </div>
+                    </div>
+                  </flyout-menu>
+                {% endif %}
+              </li>
+              {% endif %}
+            {%- endfor %}
+            </ul>
+          </nav>
+    </header>
     <main>
       {{ content | safe }}
     </main>
